--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,10 +3,14 @@ layout: default
 ---
 {% include navheader.html %}
 
+{% comment %}
 {% include services.html %}
+{% endcomment %}
 {% include portfolio_grid.html %}
 {% include about.html %}
+{% comment %}
 {% include timeline.html %}
 {% include team.html %}
 {% include clients.html %}
+{% endcomment %}
 {% include contact.html %}
